--- a/Greedy Algorithm/1931.ipynb
+++ b/Greedy Algorithm/1931.ipynb
@@ -32,9 +32,17 @@
     "for i in range(N):\n",
     "    b = input().split(' ')\n",
     "    b = tuple(map(int, b))\n",
+    "    a.append(b)N = int(input())\n",
+    "a = []\n",
+    "for i in range(N):\n",
+    "    b = input().split(' ')\n",
+    "    b = tuple(map(int, b))\n",
     "    a.append(b)\n",
     "\n",
-    "a.sort(key=lambda x:x[0])"
+    "a.sort(key=lambda x:x[0])\n",
+    "a.sort(key=lambda x:x[1])\n",
+    "\n",
+    "a"
    ]
   },
   {
