--- a/Greedy Algorithm/11399.ipynb
+++ b/Greedy Algorithm/11399.ipynb
@@ -2,56 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "80\n"
+      "32\n"
      ]
     }
    ],
    "source": [
-    "A = []\n",
-    "B = []\n",
-    "\n",
-    "N = int(input())\n",
-    "a = input()\n",
-    "b = input()\n",
-    "\n",
-    "A = list(map(int, a.split()))\n",
-    "B = list(map(int, b.split()))\n",
-    "\n",
-    "A.sort(reverse=True)\n",
-    "B.sort()\n",
+    "N =int(input())\n",
+    "a = list(map(int, (input().split(' '))))\n",
+    "a.sort()\n",
     "\n",
     "sum = 0\n",
     "for i in range(N):\n",
-    "    sum += A[i]*B[i]\n",
+    "    sum += (N-i) * a[i]\n",
     "\n",
     "print(sum)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "B"
    ]
   },
   {
@@ -64,10 +35,11 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "a35a9162167d1e4060ce6d7a97b57b50a38ec8e01abc65cb79df74ecade7518b"
+   "hash": "bbc0bf65a6f8e0217c95f13f1759dd768930a0eb76d62922d2b995a222ede28e"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit (conda)",
+   "display_name": "Python 3.9.7 64-bit ('base': conda)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
