--- a/Greedy Algorithm/12845.ipynb
+++ b/Greedy Algorithm/12845.ipynb
@@ -2,12 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = str(input())\n",
-    "a = input().split()"
+    "N = int(input())\n",
+    "a = list(map(int, input().split()))\n",
+    "a.sort(reverse=True)\n",
+    "\n",
+    "sum = 0\n",
+    "\n",
+    "for i in range(1, N):\n",
+    "    sum += a[0] + a[i]    \n",
+    "\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum = 0\n",
+    "\n",
+    "for i in range(1, N):\n",
+    "    sum += a[0] + a[i]    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum)"
    ]
   },
   {
@@ -15,9 +52,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "a"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -30,7 +65,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
   "orig_nbformat": 4
